# locomotion_nlp_kmp_pybullet_python

./: NLP_sdp_class.py  NLP_sdp_class_test.py  Position_MPC.py  README.md  pino_robot_ik.py  py_kmp_foot_traj.txt  py_nlp_sdp_com.txt  robot_joint_angle.txt  robot_kmp_traj.txt  robot_nlp_traj.txt  robot_nmpc_ik.py  robot_nmpc_nlp_ik.py  robot_state.txt  robot_tracking_controller.py  robot_traj.txt  sim_env.py  sim_robot.py
mpc_code_gen/: README.html  cpg_solver.py  problem.pickle  setup.py
mpc_code_gen/c/: CMakeLists.txt
mpc_code_gen/c/include/: cpg_solve.h  cpg_workspace.h
mpc_code_gen/c/solver_code/: CMakeLists.txt
mpc_code_gen/c/solver_code/include/: workspace.h
mpc_code_gen/c/solver_code/src/osqp/: workspace.c
mpc_code_gen/c/src/: cpg_example.c  cpg_solve.c  cpg_workspace.c
mpc_code_gen/cpp/include/: cpg_module.hpp
mpc_code_gen/cpp/src/: cpg_module.cpp
robot_description/models/iit-cogimon/: model.urdf
robot_description/models/iit-cogimon-pennacchio/: model.urdf
robot_description/models/iit-coman/: model.urdf  model_jiatao.urdf
robot_description/models/iit-coman-lowerbody-only/: model.urdf
robot_description/models/iit-coman-no-forearms/: model.urdf  model_jiatao.urdf
robot_description/models/iit-coman-no-forearms-line-feet/: model.urdf
robot_description/models/iit-coman-xtion/: model.urdf
